# ESPaperPlay_RE

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/esp_lcd_ssd1681_custom/: README.md  esp_lcd_panel_ssd1681.c  esp_lcd_ssd1681_commands.h
components/esp_lcd_ssd1681_custom/include/: esp_lcd_panel_ssd1681.h
components/freetype_custom/freetype/include/freetype/internal/: ftdebug.h
components/lvgl_custom/env_support/cmake/: esp.cmake
eez-projects/: ESPaperPlay_RE.eez-project  ESPaperPlay_RE.eez-project-ui-state
fatfs_image/: index.html
main/: CMakeLists.txt  idf_component.yml  main.c
main/include/: config_manager.h  date_update.h  decompress.h  dither.h  epaper.h  gpioX.h  i2c_config.h  i2c_ctp_ftxx06_xx36.h  ip_location.h  lv_port_disp.h  lv_port_indev.h  lvgl_init.h  sntp.h  solar_term.h  ssd1681_waveshare_1in54_lut.h  sys_config.h  touch.h  weather.h  webserver.h  yiyan.h
main/src/config_manager/: config_manager.c
main/src/hardware/display/: epaper.c
main/src/hardware/touch_pad/: gpioX.c  i2c_config.c  i2c_ctp_ftxx06_xx36.c  touch.c
main/src/lvgl/: dither.c  lv_port_disp.c  lv_port_indev.c  lvgl_init.c
main/src/network/: webserver.c  wifi.c
main/src/services/: date_update.c  decompress.c  ip_location.c  sntp.c  solar_term.c  weather.c  yiyan.c
main/src/ui/: actions.c  actions.h  eez-flow.h  fonts.h  images.c  images.h  screen_stack.c  screen_stack.h  screens.c  screens.h  ui.c  ui.h  vars.c  vars.h
main/src/ui/fonts/: ui_font_digital_numbers_48.c
main/src/ui/images/: ui_image_weaher_pressure.c  ui_image_weather_cloud.c  ui_image_weather_dew.c  ui_image_weather_humidity.c  ui_image_weather_precip.c  ui_image_weather_visibility.c
